2006-06-13  Antti Koivisto  <koivisto@iki.fi>

        Reviewed by Hyatt

        http://bugzilla.opendarwin.org/show_bug.cgi?id=9314

        * fast/block/positioning/relative-overflow-block-expected.checksum: Added.
        * fast/block/positioning/relative-overflow-block-expected.png: Added.
        * fast/block/positioning/relative-overflow-block-expected.txt: Added.
        * fast/block/positioning/relative-overflow-block.html: Added.
        * fast/block/positioning/relative-overflow-replaced-expected.checksum: Added.
        * fast/block/positioning/relative-overflow-replaced-expected.png: Added.
        * fast/block/positioning/relative-overflow-replaced-expected.txt: Added.
        * fast/block/positioning/relative-overflow-replaced-float-expected.checksum: Added.
        * fast/block/positioning/relative-overflow-replaced-float-expected.png: Added.
        * fast/block/positioning/relative-overflow-replaced-float-expected.txt: Added.
        * fast/block/positioning/relative-overflow-replaced-float.html: Added.
        * fast/block/positioning/relative-overflow-replaced.html: Added.

2006-06-13  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Dave Hyatt.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=9427
        
        * fast/css/resources/xml-stylesheet-pi-not-in-prolog.css: Added.
        * fast/css/xml-stylesheet-pi-not-in-prolog.xml: Added.

2006-06-10  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by hyatt.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=9334
          Incomplete repaint when changing block from non-positioned to positioned

        * fast/repaint/static-to-positioned-expected.checksum: Added.
        * fast/repaint/static-to-positioned-expected.png: Added.
        * fast/repaint/static-to-positioned-expected.txt: Added.
        * fast/repaint/static-to-positioned.html: Added.

2006-06-10  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by hyatt.
